# berlinbnb-pipeline

./: .gitignore  Dockerfile  README.md  berlin_airbnb_pipeline.py  docker-compose.yml  main.py  pyproject.toml
.astro/: config.yaml
dags/: download_listings_data_dag.py
notebooks/: data-ingestion-and-preprocessing.ipynb  pre-project-eda-notebook.ipynb
scripts/: download_listings_data.py
terraform/: .gitignore  main.tf  variables.tf
